--- a/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Shopping/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -70,6 +70,7 @@
 								<li><a asp-controller="Brand">Brands</a></li>
 								<li><a asp-controller="Order" asp-action="Index">Orders</a></li>
 								<li><a asp-controller="User" asp-action="Index">Users</a></li>
+								<li><a asp-controller="Role" >Role</a></li>
 
 								
 							</ul>
