--- a/Shopping/Areas/Admin/Views/User/Edit.cshtml
+++ b/Shopping/Areas/Admin/Views/User/Edit.cshtml
@@ -1,32 +1,39 @@
 ﻿@model AppUserModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["title"] = "Create User";
 }
-<h4>Edit User</h4>
-<div class=" col-md-9">
-    <form asp-action="Edit" enctype="multipart/form-data">
-        <input type="hidden" asp-for="Id" />
+
+
+<h3>Create User</h3>
+
+<div class="col-md-9">
+    <form asp-action="Create" enctype="multipart/form-data">
+
+
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label>User Name</label>
+            <label>UserName</label>
             <input asp-for="UserName" required class="form-control" />
-            <span asp-validation-for="UserName" class="text-danger" />
+            <span asp-validation-for="UserName" class="text-danger"></span>
         </div>
+
         <div class="form-group">
             <label>Email</label>
             <input asp-for="Email" required class="form-control" />
-            <span asp-validation-for="Email" class="text-danger" />
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
+
         <div class="form-group">
             <label>Phone Number</label>
-            <input asp-for="PhoneNumber" required class="form-control" />
-            <span asp-validation-for="PhoneNumber" class="text-danger" />
+            <input asp-for="PhoneNumber" class="form-control" />
+            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input asp-for="PasswordHash" readonly class="form-control" />
-            <span asp-validation-for="PasswordHash" class="text-danger" />
+            <input asp-for="PasswordHash" class="form-control" />
+            <span asp-validation-for="PasswordHash" class="text-danger"></span>
         </div>
+
         <div class="form-group">
             <label>Roles</label>
             <select asp-for="RoleId" class="form-control" asp-items="ViewBag.Roles">
@@ -34,17 +41,18 @@
             <span asp-validation-for="RoleId" class="text-danger"></span>
         </div>
 
-
-
         <div class="form-group">
-            <button class="btn btn-primary">Update</button>
+            <button class="btn btn-primary">Create</button>
         </div>
+
+
     </form>
     <a asp-action="Index">Back to list User</a>
 </div>
-@section Scriptss {
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+
 
