--- a/Shopping/Areas/Admin/Views/User/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/User/Index.cshtml
@@ -1,43 +1,52 @@
-﻿@model IEnumerable<AppUserModel>
-@{
-    ViewData["Title"] = "List Users";
+﻿@{
+    ViewData["title"] = "List User";
 }
-<h3>List Users</h3>
-<a asp-action="Create" asp-controller="User">Add User</a>
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">User Name</th>
-            <th scope="col">EMail</th>
-            <th scope="col">Phone</th>
-            <th scope="col">PassWordHash</th>
-            <th scope="col">Role</th>
 
+<!DOCTYPE html>
 
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model)
-        {
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+</head>
+<body>
+    <h3>List User</h3>
+
+    <a class="btn btn-primary" asp-action="Create" asp-controller="User">Add User</a>
+    <div class="table table-responsive">
+        <table class="table table-responsive" id="myTable">
+        <thead>
             <tr>
-                <th>@user.Id</th>
-                <th >@user.UserName</th>
-                <td>@user.Email</td>
-                <td>@user.PhoneNumber</td>
-                <td>@user.PasswordHash</td>
-                <td>#</td>
-                <td></td>
-
-                <td>
-                    <a asp-action="Edit" class="btn btn-warning btn-sm" asp-controller="User" asp-route-id="@user.Id">Edit</a>
-                    <a asp-action="Delete" class="btn btn-danger btn-sm confirmDeletion" asp-controller="User" asp-route-id="@user.Id">Delete</a>
-
-
-                </td>
+                <th>Id</th>
+                <th>UserName</th>
+                <th>Email</th>
+                <th>PasswordHash</th>
+                <th>Phone</th>
+                <th>Role</th>
+                <th></th>
             </tr>
-        }
+        </thead>
+        <tbody>
+                @foreach (var usersWithRoles in Model)
+            {
+                <tr>
+                        <td>@usersWithRoles.User.Id</td>
+                        <td>@usersWithRoles.User.UserName</td>
+                        <td>@usersWithRoles.User.Email</td>
+                        <td>@usersWithRoles.User.PasswordHash</td>
+                        <td>@usersWithRoles.User.PhoneNumber</td>
+                    <td>
+                            @usersWithRoles.RoleName
+                    </td>
+                    <td>
+                            <a class="btn btn-warning btn-sm" asp-action="Edit" asp-controller="User" asp-route-Id="@usersWithRoles.User.Id">Edit</a>
+                            <a class="btn btn-danger btn-sm confirmDeletion" asp-action="Delete" asp-controller="User" asp-route-Id="@usersWithRoles.User.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+        </table>
+    </div>
+</body>
+</html>
 
-
-    </tbody>
-</table>
