--- a/Shopping/Views/Product/Details.cshtml
+++ b/Shopping/Views/Product/Details.cshtml
@@ -84,7 +84,7 @@
 					<li class="active"><a href="#details" data-toggle="tab">Details</a></li>
 					<li><a href="#companyprofile" data-toggle="tab">Company Profile</a></li>
 					<li><a href="#tag" data-toggle="tab">Tag</a></li>
-					<li ><a href="#reviews" data-toggle="tab">Reviews (5)</a></li>
+					<li class="active" ><a href="#reviews" data-toggle="tab">Đánh Giá (5)</a></li>
 				</ul>
 			</div>
 			<div class="tab-content">
