--- a/Shopping/Areas/Admin/Views/Product/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/Product/Index.cshtml
@@ -2,6 +2,14 @@
 @{
     ViewData["Title"] = "Product Listed";
 }
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+</head>
+<body>
 <h3>List Product</h3>
 <a  asp-action="Create" asp-controller="Product">Add Product</a>
 <table class="table" id="myTable">
