--- a/Shopping/Areas/Admin/Views/Contact/Index.cshtml
+++ b/Shopping/Areas/Admin/Views/Contact/Index.cshtml
@@ -1,53 +1,52 @@
-﻿@model IEnumerable<ProductModel>
+﻿@model IEnumerable<ContactModel>
 @{
-    ViewData["Title"] = "Product Listed";
+    ViewData["title"] = "Contact Info";
 }
+
 <!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>Contact</title>
 </head>
 <body>
-    <h3>List Product</h3>
-    <a asp-action="Create" asp-controller="Product">Add Product</a>
-    <table class="table" id="myTable">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Product Name</th>
-                <th scope="col">Product Description</th>
-                <th scope="col">Product Price</th>
-                <th scope="col">Product Image</th>
-                <th scope="col">Product Slug</th>
-                <th scope="col">Product Category</th>
-                <th scope="col">Product Brand</th>
-                <th scope="col">Product Manage</th>
-
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
+    <h3>List Contact</h3>
+    <div class="table table-responsive">
+        <table class="table table-responsive" id="myTable">
+            <thead>
                 <tr>
-                    <th scope="row">@item.Id</th>
-                    <td>@item.Name</td>
-                    <td>@item.Description</td>
-                    <td>@item.Price</td>
-                    <td><img src="~/media/products/@item.Image" width="120"></td>
-                    <td>@item.Slug</td>
-                    <td>@item.Category.Name</td>
-                    <td>@item.Brand.Name</td>
-                    <td>
-                        <a class="btn btn-warning btn-sm" asp-action="Edit" asp-controller="Product" asp-route-id="@item.Id">Edit</a>
-                        <a class="btn btn-danger btn-sm confirmDeletion" asp-action="Delete" asp-controller="Product" asp-route-id="@item.Id">Delete</a>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Map</th>
+                    <th>Email</th>
+                    <th>Logo</th>
+                    <th>Phone</th>
 
-
-                    </td>
+                    <th>Action</th>
                 </tr>
-            }
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
 
+                        <td>@item.Name</td>
+                        <td>@Html.Raw(@item.Description)</td>
+                        <td>@Html.Raw(@item.Map)</td>
+                        <td>@item.Email</td>
+                        <td> <img src="~/media/logo/@item.LogoImg" width="120px" height="150px" /> </td>
+                        <td> @item.Phone </td>
 
-        </tbody>
-    </table>
+                        <td>
+                            <a class="btn btn-warning btn-sm" asp-action="Edit" asp-controller="Contact">Edit</a>
+
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</body>
+
+</html>
