--- a/Shopping/Views/Home/Index.cshtml
+++ b/Shopping/Views/Home/Index.cshtml
@@ -2,9 +2,7 @@
 <html lang="en">
 	@model IEnumerable<ProductModel>
 <partial name="_SliderPartial" />
-<div class="col-sm-3">
-	<partial name="_SidebarPartial" />
-</div>
+
 
 	
 
@@ -48,8 +46,8 @@
 										</div>
 										<div class="choose">
 											<ul class="nav nav-pills nav-justified">
-												<li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
-												<li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
+											<li><button class="fa fa-plus-square add-btn-wishlist" data-product_id="@item.Id">Yêu Thích</button></li>
+											<li><button class="fa fa-plus-square add-btn-compare" data-product_id="@item.Id">So Sánh</button></li>
 											</ul>
 										</div>
 									</div> <!-- Đóng .product-image-wrapper -->
@@ -75,15 +73,14 @@
 			$('.add-to-cart').click(function () {
 				var Id = $(this).data("product_id");
 
-				//alert(product_id);
+				// alert(product_id);
 
 				$.ajax({
 					type: "POST",
 					url: "@Url.Action("Add","Cart")",
 					data: { Id: Id }, // Send data to the server
-
 					success: function (result) {
-						// Handle successful update
+					
 						if (result) {
 
 							Swal.fire("Thêm giỏ hàng thành công.");
@@ -94,21 +91,21 @@
 			});
 		
 	</script>
-	<!---Add to Wishlish Script--->
+	
 	<script>
 		$(document).ready(function () {
 			$('.add-btn-wishlist').click(function () {
 				var Id = $(this).data("product_id");
 
-				//alert(product_id);
+				// alert(product_id);
 
 				$.ajax({
 					type: "POST",
 					url: "@Url.Action("AddWishlist", "Home")",
-					data: { Id: Id }, // Send data to the server
+					data: { Id: Id }, 
 
 					success: function (result) {
-						// Handle successful update
+						
 						if (result) {
 
 							Swal.fire("Thêm yêu thích sản phẩm thành công.");
@@ -119,22 +116,21 @@
 			});
 		});
 	</script>
-	<!---//Add to Wishlish Script--->
-	<!---Add to Wishlish Script--->
+
 	<script>
 		$(document).ready(function () {
 			$('.add-btn-compare').click(function () {
 				var Id = $(this).data("product_id");
 
-				//alert(product_id);
+				// alert(product_id);
 
 				$.ajax({
 					type: "POST",
 					url: "@Url.Action("AddCompare", "Home")",
-					data: { Id: Id }, // Send data to the server
+					data: { Id: Id }, 
 
 					success: function (result) {
-						// Handle successful update
+					
 						if (result) {
 
 							Swal.fire("Thêm sao sánh thành công.");
