--- a/Shopping/Views/Shared/_Layout.cshtml
+++ b/Shopping/Views/Shared/_Layout.cshtml
@@ -104,7 +104,16 @@
 								{
 
 									<li><a asp-action="Index" asp-controller="Cart"><i class="fa fa-crosshairs"></i> Checkout</a></li>
-									<li><a asp-action="History" asp-controller="Account"><i class="fa fa-user"></i> Account</a></li>
+									<li class="dropdown">
+										<a class="dropdown-toggle" data-toggle="dropdown">
+											<i class="fa fa-user"></i> Account <span class="caret"></span>
+										</a>
+										<ul class="dropdown-menu">
+											<li><a asp-action="History" asp-controller="Account">Lịch Sử đơn hàng</a></li>
+											<li><a asp-action="UpdateAccount" asp-controller="Account">Cập nhật thông tin</a></li>
+										</ul>
+									</li>
+
 									<li><a asp-action="Wishlist" asp-controller="Home"><i class="fa fa-heart"></i> Wishlist</a></li>
 									<li><a asp-action="Compare" asp-controller="Home"><i class="fa fa-star"></i> Compare</a></li>
 									<li><a asp-controller="Product" asp-action="Index" asp-area="Admin"><i class="fa fa-lock"></i>Admin CMS</a></li>
